[tool.poetry]
name = "mli"
version = "0.1.0"
description = "Python-based Machine Learning Interface"
homepage = "https://github.com/mtasic85/python-mli"
repository = "https://github.com/mtasic85/python-mli"
authors = ["Marko Tasic <mtasic85@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mli"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.6"}
uvloop = "^0.19.0"
requests = "^2.31.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
